--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^10.0.3",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-navigation/web": "^1.0.0-alpha.9",
+    "axios": "^0.19.2",
     "expo": "^35.0.0",
     "expo-asset": "^7.0.0",
     "expo-constants": "^7.0.0",
