--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "^1.5.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-masked-text": "^1.13.0",
     "react-native-pose": "^0.9.1",
     "react-native-text-input-mask": "^1.0.6",
