--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "axios": "^0.19.2",
     "expo": "^35.0.0",
     "expo-asset": "^7.0.0",
-    "expo-camera": "^8.2.0",
+    "expo-camera": "~7.0.0",
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
     "expo-linear-gradient": "^8.1.0",
