--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "expo-camera": "~7.0.0",
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
-    "expo-linear-gradient": "^8.1.0",
+    "expo-linear-gradient": "~7.0.0",
     "expo-web-browser": "^7.0.0",
     "flatlist": "0.0.0",
     "mobiscroll": "^3.0.0-beta6",
@@ -32,7 +32,7 @@
     "react-native-confetti-cannon": "^1.5.0",
     "react-native-dots-pagination": "^0.1.9",
     "react-native-emoji": "^1.8.0",
-    "react-native-gesture-handler": "^1.5.0",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-pose": "^0.9.1",
     "react-native-text-input-mask": "^1.0.6",
