--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
     "expo-linear-gradient": "~7.0.0",
+    "expo-permissions": "~7.0.0",
     "expo-web-browser": "^7.0.0",
     "flatlist": "0.0.0",
     "mobiscroll": "^3.0.0-beta6",
