--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     "icon": "./assets/images/icon.png",
     "splash": {
       "image": "./assets/images/image.png",
-      "resizeMode": "contain",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "updates": {
