--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@expo/samples": "~3.0.3",
     "@expo/vector-icons": "^10.0.3",
     "@expo/webpack-config": "^0.12.6",
-    "@react-native-community/masked-view": "^0.1.10",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "axios": "^0.19.2",
     "expo": "^35.0.0",
@@ -28,16 +28,18 @@
     "expo-permissions": "~7.0.0",
     "expo-web-browser": "^7.0.0",
     "flatlist": "0.0.0",
+    "form-data": "^3.0.0",
     "mobiscroll": "^3.0.0-beta6",
+    "moment": "^2.27.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-elements": "^2.0.0",
-    "react-native-gesture-handler": "~1.3.0",
-    "react-native-linear-gradient": "^2.5.6",
     "react-native-confetti-cannon": "^1.5.0",
     "react-native-dots-pagination": "^0.1.9",
+    "react-native-elements": "^2.0.0",
     "react-native-emoji": "^1.8.0",
+    "react-native-gesture-handler": "~1.3.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-masked-text": "^1.13.0",
     "react-native-pose": "^0.9.1",
     "react-native-reanimated": "~1.2.0",
