--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-web-browser": "^7.0.0",
     "flatlist": "0.0.0",
     "mobiscroll": "^3.0.0-beta6",
+    "moment": "^2.27.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
