--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-component-inview": "^1.0.1",
     "react-native-confetti-cannon": "^1.5.0",
     "react-native-dots-pagination": "^0.1.9",
     "react-native-emoji": "^1.8.0",
