--- a/app.json
+++ b/app.json
@@ -1,13 +1,12 @@
 {
   "expo": {
-    "name": "HiFriends",
-    "slug": "AwesomeProject",
+    "name": "Linx",
+    "slug": "Let's get linx",
     "privacy": "public",
     "sdkVersion": "35.0.0",
     "platforms": [
       "ios",
-      "android",
-      "web"
+      "android"
     ],
     "version": "1.0.1",
     "orientation": "portrait",
