--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Linx",
-    "slug": "Lets get linx",
+    "slug": "Lets-get-linx",
     "privacy": "public",
     "sdkVersion": "35.0.0",
     "platforms": [
