--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
       "ios",
       "android"
     ],
-    "version": "1.0.1",
+    "version": "1.0.2",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "splash": {
@@ -23,7 +23,11 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier": "com.samsontse.Lets-get-linx"
+    },
+    "android": {
+      "package": "com.linx.linx",
+      "versionCode": 2
     },
     "description": ""
   }
