--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
     "expo-linear-gradient": "~7.0.0",
+    "expo-linking": "^1.0.3",
     "expo-permissions": "~7.0.0",
     "expo-web-browser": "^7.0.0",
     "flatlist": "0.0.0",
