--- a/package.json
+++ b/package.json
@@ -13,41 +13,41 @@
   },
   "dependencies": {
     "@expo/samples": "~3.0.3",
-    "@expo/vector-icons": "^10.0.3",
-    "@expo/webpack-config": "^0.12.6",
+    "@expo/vector-icons": "^10.0.0",
+    "@expo/webpack-config": "^0.11.25",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
-    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "axios": "^0.19.2",
-    "expo": "^35.0.0",
-    "expo-asset": "^7.0.0",
-    "expo-camera": "~7.0.0",
-    "expo-constants": "^7.0.0",
-    "expo-font": "^7.0.0",
-    "expo-linear-gradient": "~7.0.0",
-    "expo-linking": "^1.0.3",
-    "expo-permissions": "~7.0.0",
-    "expo-web-browser": "^7.0.0",
+    "expo": "^37.0.0",
+    "expo-asset": "~8.1.5",
+    "expo-camera": "~8.2.0",
+    "expo-constants": "~9.0.0",
+    "expo-font": "~8.1.0",
+    "expo-linear-gradient": "~8.1.0",
+    "expo-linking": "~1.0.1",
+    "expo-permissions": "~8.1.0",
+    "expo-web-browser": "~8.2.1",
     "flatlist": "0.0.0",
     "form-data": "^3.0.0",
     "mobiscroll": "^3.0.0-beta6",
     "moment": "^2.27.0",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-component-inview": "^1.0.1",
     "react-native-confetti-cannon": "^1.5.0",
     "react-native-countdown-component": "^2.7.1",
     "react-native-dots-pagination": "^0.1.9",
     "react-native-elements": "^2.0.4",
     "react-native-emoji": "^1.8.0",
-    "react-native-gesture-handler": "~1.3.0",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-masked-text": "^1.13.0",
     "react-native-pose": "^0.9.1",
-    "react-native-reanimated": "~1.2.0",
-    "react-native-safe-area-context": "~0.3.6",
-    "react-native-screens": "~1.0.0-alpha.23",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
     "react-native-text-input-mask": "^1.0.6",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.13.0",
@@ -56,8 +56,8 @@
     "rollup": "^1.27.2"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.0.0",
-    "jest-expo": "^35.0.0"
+    "babel-preset-expo": "^8.1.0",
+    "jest-expo": "^37.0.0"
   },
   "private": true
 }
