--- a/package.json
+++ b/package.json
@@ -14,27 +14,27 @@
   "dependencies": {
     "@expo/samples": "~3.0.3",
     "@expo/vector-icons": "^10.0.0",
-    "@expo/webpack-config": "^0.11.25",
+    "@expo/webpack-config": "^0.12.16",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
-    "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "axios": "^0.19.2",
-    "expo": "^37.0.0",
-    "expo-asset": "~8.1.5",
-    "expo-camera": "~8.2.0",
-    "expo-constants": "~9.0.0",
-    "expo-font": "~8.1.0",
-    "expo-linear-gradient": "~8.1.0",
+    "expo": "^38.0.0",
+    "expo-asset": "~8.1.7",
+    "expo-camera": "~8.3.1",
+    "expo-constants": "~9.1.1",
+    "expo-font": "~8.2.1",
+    "expo-linear-gradient": "~8.2.1",
     "expo-linking": "~1.0.1",
-    "expo-permissions": "~8.1.0",
-    "expo-web-browser": "~8.2.1",
+    "expo-permissions": "~9.0.1",
+    "expo-web-browser": "~8.3.1",
     "flatlist": "0.0.0",
     "form-data": "^3.0.0",
     "mobiscroll": "^3.0.0-beta6",
     "moment": "^2.27.0",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-component-inview": "^1.0.1",
     "react-native-confetti-cannon": "^1.5.0",
     "react-native-countdown-component": "^2.7.1",
@@ -45,19 +45,19 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-masked-text": "^1.13.0",
     "react-native-pose": "^0.9.1",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
     "react-native-text-input-mask": "^1.0.6",
-    "react-native-web": "^0.11.7",
+    "react-native-web": "~0.11.7",
     "react-navigation": "^3.13.0",
     "react-navigation-stack": "^2.5.1",
     "react-text-mask": "^5.4.3",
     "rollup": "^1.27.2"
   },
   "devDependencies": {
-    "babel-preset-expo": "^8.1.0",
-    "jest-expo": "^37.0.0"
+    "babel-preset-expo": "^8.2.3",
+    "jest-expo": "^38.0.0"
   },
   "private": true
 }
