--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "form-data": "^3.0.0",
     "mobiscroll": "^3.0.0-beta6",
     "moment": "^2.27.0",
+    "query-string": "^6.13.1",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
