--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^10.0.0",
     "@expo/webpack-config": "^0.12.16",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
+    "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "axios": "^0.19.2",
