--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
     "expo-linear-gradient": "~8.2.1",
-    "expo-linking": "~1.0.1",
+    "expo-linking": "^1.0.3",
     "expo-permissions": "~9.0.1",
     "expo-web-browser": "~8.3.1",
     "flatlist": "0.0.0",
