--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-pose": "^0.9.1",
     "react-native-reanimated": "~1.9.0",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "~3.0.7",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~2.9.0",
     "react-native-text-input-mask": "^1.0.6",
     "react-native-web": "~0.11.7",
