--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/picker": "^1.6.6",
+    "@react-native-community/picker": "1.6.0",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "axios": "^0.19.2",
     "expo": "^38.0.0",
