Added firebase messaging and changed reset email address

--- a/app.json
+++ b/app.json
@@ -30,7 +30,8 @@
     },
     "android": {
       "package": "com.linx.linx",
-      "versionCode": 3
+      "versionCode": 3,
+      "googleServicesFile": "./google-services.json"
     },
     "description": ""
   }
