--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
       "ios",
       "android"
     ],
-    "version": "1.0.6",
+    "version": "1.0.9",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "notification": {
@@ -26,11 +26,11 @@
       "**/*"
     ],
     "ios": {
-      "bundleIdentifier": "com.samsontse.Lets-get-linx"
+      "bundleIdentifier": "com.linx.linx-app"
     },
     "android": {
       "package": "com.linx.linx",
-      "versionCode": 3,
+      "versionCode": 5,
       "googleServicesFile": "./google-services.json"
     },
     "description": ""
