--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
       "ios",
       "android"
     ],
-    "version": "1.0.9",
+    "version": "1.0.10",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "notification": {
@@ -30,8 +30,12 @@
     },
     "android": {
       "package": "com.linx.linx",
-      "versionCode": 5,
-      "googleServicesFile": "./google-services.json"
+      "versionCode": 6,
+      "googleServicesFile": "./google-services.json",
+      "adaptiveIcon": {
+      	"foregroundImage": "./assets/images/icon_foreground.png",
+      	"backgroundColor": "#8002FE"
+      }
     },
     "description": ""
   }
