--- a/app.json
+++ b/app.json
@@ -26,7 +26,10 @@
       "**/*"
     ],
     "ios": {
-      "bundleIdentifier": "com.linx.linx-app"
+      "bundleIdentifier": "com.linx.linx-app",
+      "infoPlist": {
+        "NSCameraUsageDescription": "Use your camera to take a profile picture so your new friends can see who you are."
+      }
     },
     "android": {
       "package": "com.linx.linx",
