Updates for google sign in

--- a/app.json
+++ b/app.json
@@ -39,7 +39,13 @@
     "android": {
       "package": "com.linx.linx",
       "versionCode": 11,
-      "googleServicesFile": "./google-services.json"
+      "googleServicesFile": "./google-services.json",
+      "config": {
+        "googleSignIn": {
+          "apiKey": "AIzaSyBPDNhtYo3t9p9UogB-x5g4D7pAHg_-1c4",
+          "certificateHash": "968A6E285A5CD23176180B40529734BEBB6C27CE"
+        }
+      }
     },
     "description": ""
   }
