--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react-navigation": "^3.13.0",
     "react-navigation-stack": "^2.5.1",
     "react-text-mask": "^5.4.3",
-    "rollup": "^1.27.2"
+    "rollup": "^1.27.2",
+    "expo-image-picker": "~8.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.2.3",
