--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "expo-camera": "~8.3.1",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
-    "expo-google-app-auth": "^8.1.3",
+    "expo-google-app-auth": "^8.1.4",
+    "expo-image-picker": "~8.3.0",
     "expo-linear-gradient": "~8.2.1",
     "expo-linking": "^1.0.3",
     "expo-permissions": "~9.0.1",
@@ -62,7 +63,7 @@
     "react-navigation-stack": "^2.5.1",
     "react-text-mask": "^5.4.3",
     "rollup": "^1.27.2",
-    "expo-image-picker": "~8.3.0"
+    "expo-app-auth": "~9.1.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.2.3",
