--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/web": "^1.0.0-alpha.9",
     "axios": "^0.19.2",
     "expo": "^38.0.0",
+    "expo-app-auth": "~9.1.1",
     "expo-asset": "~8.1.7",
     "expo-camera": "~8.3.1",
     "expo-constants": "~9.1.1",
@@ -63,7 +64,7 @@
     "react-navigation-stack": "^2.5.1",
     "react-text-mask": "^5.4.3",
     "rollup": "^1.27.2",
-    "expo-app-auth": "~9.1.1"
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.2.3",
