Upgraded to expo 40 to get rid of background services

--- a/package.json
+++ b/package.json
@@ -13,63 +13,63 @@
   },
   "dependencies": {
     "@expo/samples": "~3.0.3",
-    "@expo/vector-icons": "^10.0.0",
-    "@expo/webpack-config": "^0.12.16",
+    "@expo/vector-icons": "^12.0.0",
+    "@expo/webpack-config": "~0.12.45",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
-    "@react-native-community/async-storage": "~1.11.0",
+    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/picker": "1.6.0",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "axios": "^0.21.1",
-    "expo": "^38.0.0",
-    "expo-app-auth": "~9.1.1",
-    "expo-asset": "~8.1.7",
-    "expo-camera": "~8.3.1",
-    "expo-constants": "~9.1.1",
-    "expo-font": "~8.2.1",
+    "expo": "^40.0.1",
+    "expo-app-auth": "~9.3.0",
+    "expo-apple-authentication": "~2.2.2",
+    "expo-asset": "~8.2.1",
+    "expo-camera": "~9.1.0",
+    "expo-constants": "~9.3.3",
+    "expo-font": "~8.4.0",
     "expo-google-app-auth": "^8.1.4",
-    "expo-image-picker": "~8.3.0",
-    "expo-linear-gradient": "~8.2.1",
-    "expo-linking": "^1.0.3",
-    "expo-permissions": "~9.0.1",
-    "expo-sharing": "~8.2.1",
-    "expo-web-browser": "~8.3.1",
+    "expo-image-picker": "~9.2.0",
+    "expo-linear-gradient": "~8.4.0",
+    "expo-linking": "~2.0.1",
+    "expo-permissions": "~10.0.0",
+    "expo-sharing": "~8.5.0",
+    "expo-web-browser": "~8.6.0",
     "flatlist": "0.0.0",
     "form-data": "^3.0.0",
     "mobiscroll": "^3.0.0-beta6",
     "moment": "^2.27.0",
     "query-string": "^6.13.1",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-component-inview": "^1.0.1",
     "react-native-confetti-cannon": "^1.5.0",
     "react-native-countdown-component": "^2.7.1",
     "react-native-dots-pagination": "^0.1.9",
     "react-native-elements": "^2.0.4",
     "react-native-emoji": "^1.8.0",
-    "react-native-gesture-handler": "~1.6.0",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-masked-text": "^1.13.0",
     "react-native-pose": "^0.9.1",
-    "react-native-reanimated": "~1.9.0",
+    "react-native-reanimated": "~1.13.0",
     "react-native-responsive-fontsize": "^0.4.3",
     "react-native-responsive-screen": "^1.4.1",
-    "react-native-safe-area-context": "~3.0.7",
+    "react-native-safe-area-context": "3.1.9",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~2.9.0",
+    "react-native-screens": "~2.15.2",
     "react-native-text-input-mask": "^1.0.6",
-    "react-native-web": "~0.11.7",
+    "react-native-web": "~0.13.12",
     "react-navigation": "^3.13.0",
     "react-navigation-stack": "^2.5.1",
     "react-text-mask": "^5.4.3",
     "rollup": "^1.27.2",
-    "seedrandom": "^3.0.5",
-    "expo-apple-authentication": "~2.2.1"
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
-    "babel-preset-expo": "^8.2.3",
-    "jest-expo": "^38.0.0"
+    "babel-preset-expo": "8.3.0",
+    "jest-expo": "^40.0.0"
   },
   "private": true
 }
