Modified app to resolve SDK 40 issues

--- a/app.json
+++ b/app.json
@@ -48,7 +48,10 @@
           "apiKey": "AIzaSyBPDNhtYo3t9p9UogB-x5g4D7pAHg_-1c4",
           "certificateHash": "968A6E285A5CD23176180B40529734BEBB6C27CE"
         }
-      }
+      },
+      "permissions": [
+        "CAMERA"
+      ]
     },
     "description": ""
   }
