--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.21.1",
     "expo": "^40.0.1",
     "expo-app-auth": "~9.3.0",
+    "expo-app-loading": "^1.0.1",
     "expo-apple-authentication": "~2.2.2",
     "expo-asset": "~8.2.1",
     "expo-camera": "~9.1.0",
@@ -65,7 +66,8 @@
     "react-navigation-stack": "^2.5.1",
     "react-text-mask": "^5.4.3",
     "rollup": "^1.27.2",
-    "seedrandom": "^3.0.5"
+    "seedrandom": "^3.0.5",
+    "expo-notifications": "~0.8.2"
   },
   "devDependencies": {
     "babel-preset-expo": "8.3.0",
